RESOLVED FIXED274501
Suppress virtual destructor warning in ExternalStringImpl
https://bugs.webkit.org/show_bug.cgi?id=274501
Summary Suppress virtual destructor warning in ExternalStringImpl
Ryosuke Niwa
Reported 2024-05-21 19:36:22 PDT
Suppress the warning for the lack of virtual destructor in ExternalStringImpl.
Attachments
Ryosuke Niwa
Comment 1 2024-05-21 19:42:26 PDT
EWS
Comment 2 2024-05-21 21:02:34 PDT
Committed 279100@main (6d955f02f7ce): <https://commits.webkit.org/279100@main> Reviewed commits have been landed. Closing PR #28894 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-21 21:03:13 PDT
Note You need to log in before you can comment on or make changes to this bug.