Suppress virtual destructor warning in ExternalStringImpl https://bugs.webkit.org/show_bug.cgi?id=274501

Reviewed by Geoffrey Garen.

Suppress the warning for the lack of virtual destructor in ExternalStringImpl.

* Source/WTF/wtf/text/ExternalStringImpl.h:
(WTF::ExternalStringImpl::freeExternalBuffer):

Canonical link: https://commits.webkit.org/279100@main